--- a/duke-core/buildNumber.properties
+++ b/duke-core/buildNumber.properties
@@ -1,3 +1,3 @@
 #maven.buildNumber.plugin properties file
-#Sun Sep 04 19:41:59 CEST 2022
-buildNumber0=3658
+#Wed Jan 25 18:27:06 ART 2023
+buildNumber0=3666
