--- a/duke-lucene/pom.xml
+++ b/duke-lucene/pom.xml
@@ -5,7 +5,7 @@
         <groupId>no.priv.garshol.duke</groupId>
         <artifactId>duke</artifactId>
         <version>1.3-SNAPSHOT</version>
-        <relativePath>../</relativePath>
+        <relativePath>../pom.xml</relativePath>
     </parent>
     <artifactId>duke-lucene</artifactId>
     <packaging>jar</packaging>
